environment/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-demo
spec:
  ingressClassName: nginx
  rules:
    - host: dev.gitops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-demo
                port:
                  number: 8080
  tls:
    - hosts:
        - dev.gitops.local
      secretName: dev-gitops-demo-tls
